examples/c/error-codes/violates-constraint/fatal/CV-CEB9-bad-static.output
CV-CEB9-bad-static.c:5:12: error: invalid operands to binary expression ('int' and 'double')
  return x & 0.0;
         ~ ^ ~~~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
